k8s/infra/ingress/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: geoblock
spec:
  plugin:
    geoblock:
      silentStartUp: true
      allowLocalRequests: false
      logLocalRequests: false
      logAllowedRequests: false
      logApiRequests: false
      api: "http://iplookup:8000/api/ip/{ip}"
      apiTimeoutMs: 3000 # optional
      addCountryHeader: true
      allowUnknownCountries: false
      httpStatusCodeDeniedRequest: 418
      cacheSize: 25
      countries:
        - FR
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: modsec
spec:
  plugin:
    modsec:
      modSecurityUrl: http://waf:8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: errors
spec:
  errors:
    status:
      - "403"
      - "418"
    service:
      name: errors
      port: 80
    query: "/{status}.html"
